crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_mut_ref_to_vec_of_mut_refs.rs
fn supports_mut_ref_to_vec_of_mut_refs(_xs: &mut Vec<&mut i32>) {}

fn main() {}
