crates/tsuno-driver/tests/fixtures/snapshots/fail/supports_vec_of_mut_refs.rs
fn supports_vec_of_mut_refs(_xs: Vec<&mut i32>) {}

fn main() {}
